# Conquest

./: requirements.txt
agent/: main.py
api/app/: config.py  dependencies.py  exceptions.py  main.py
api/app/core/: jwt.py
api/app/crypto/: aes_cipher.py  key_manager.py
api/app/db/: __init__.py  database.py  schema.sql  sqlite.py
api/app/models/: __init__.py  agent.py  operator.py  operator_event.py  task.py  token.py
api/app/repositories/: agent_refresh_tokens_repo.py  agents_repo.py  operator_events_repo.py  operators_repo.py  registration_tokens_repo.py  tasks_repo.py
api/app/schemas/: __init__.py  agent.py  errors.py  operator.py  task.py
api/app/services/: agent_service.py  operator_service.py  tasks_service.py
api/app/utils/: time.py
api/app/workers/: __init__.py
api/app/ws/: __init__.py  agent_handler.py  deadlines.py  events.py  manager.py  messages.py  operator_handler.py
api/contracts/: asyncapi.yaml  openapi.json
api/scripts/: generate_registration_token.py
api/tests/: conftest.py
api/tests/integration/: test_contract_health.py  (+2 more)
core/: __init__.py
core/crypto/: __init__.py  aes_cipher.py  helpers.py  key_manager.py
operator-cli/: pyproject.toml
operator-cli/app/: main.py  repl.py
operator-cli/app/api/: __init__.py  agents.py  auth.py  client.py  tasks.py
operator-cli/app/commands/: __init__.py  commands.py
operator-cli/app/commands/handlers/: __init__.py  auth.py  misc.py  run.py  show.py  tasks.py
operator-cli/app/core/: __init__.py  config.py
operator-cli/app/formatters/: __init__.py  formatters.py
(+10 files in other folders)
